@@ -18,7 +18,7 @@
     </div>
     <div id="sidebar">
       <h2>Search</h2>
-      <form method="get" id="sform" action="/pages/search">
+      <form method="get" id="sform" action="/pages">
         <label for="q">Search:</label>
         <input type="text" id="q" value="" name="q" size="15" />
       </form>
