@@ -48,7 +48,7 @@
     	  {% endif %}
         {% endcomment %}
 
-    	  <form method="get" id="sform" action="/pages/search">
+    	  <form method="get" id="sform" action="/pages">
         	  <input type="text" id="q" value="" name="q" size="15" class="input" />
            <input type="image" value="submit" src="/themes/micro/images/icon-find.gif" class="button" />          
         </form>
