@@ -65,7 +65,7 @@
 
 <div id="search" class="boxy short">
   <h3>Search</h3>
-  <form method="get" action="/pages/search">
+  <form method="get" action="/pages">
     <fieldset>
       <input class="text" type="text" id="q" value="" name="q"/>
     </fieldset>
